--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "classnames": "^2.2.6",
-    "qs": "^6.5.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "classnames": "^2.2.5",
+    "jwt-decode": "^2.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
