--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
