--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
