--- a/client/.gitignore
+++ b/client/.gitignore
@@ -15,7 +15,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/client/src/components/profile/ProfileGithub.js
+ProfileGithub.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
